# mdlvis-rs

./: Cargo.toml  README.md  mdx.hexpat  test.sh
delphi/: ArtWoW.txt  ExpGetFloat.ASM  GetIntVal.ASM  Glinst.pas  Real3D.pas  addFrame.dfm  addFrame.pas  cabstract.pas  crash.pas  dbcdata.txt  faq.txt  features.txt  findsym.asm  frmmain.dfm  frmmain.pas  glow.pas  gotocipher.ASM  guic.pas  history.txt  m2data-on.txt  mdlDraw.pas  mdlVis.man  mdlvis.dof  mdlvis.dpr  mdlvis.ini  mdlwork.pas  mdlxadd-on.txt  objedut.pas  stumbling.txt  sumwhatsnew.txt  tests.pas  unAbout.dfm  unAbout.pas  unTex.dfm  unTex.pas  un_obj.dfm  un_obj.pas  un_optimize.dfm  un_optimize.pas  un_warn.dfm  (+3 more)
src/: animation_old.rs.bak  app.rs  error.rs  main.rs  material_system.rs  model.rs  parser.rs  pipeline_system.rs  renderer.rs  settings.rs  shader.wgsl  texture_loader.rs  texture_system.rs  ui.rs
src/animation/: controller.rs  interpolation.rs  mod.rs  skeleton.rs  system.rs  types.rs
src/app/: app.rs  handler.rs  handler_registry.rs  mod.rs
src/material/: filter_mode.rs  flags.rs  material.rs  mod.rs  uniform.rs
src/model/: animation.rs  geoset.rs  mod.rs  model.rs  skeleton.rs  texture.rs
src/parser/: geoset.rs  load.rs  mod.rs  parser.rs
src/renderer/: bounding_box.rs  geoset_render_info.rs  line_vertex.rs  mod.rs  render.rs  renderer.rs  team_color.rs  vertex.rs
src/texture/: loader.rs  manager.rs  mod.rs  panel.rs  start_load.rs
test-data/Ember Forge  Ember Knight/: Ember Forge_opt2.mdx  Fire_Stream.mdx  README.md  readme.html
test-data/Nether Blast/: Nether Blast I.mdx  (+3 more)
(+15 files in other folders)
