[package]
name = "mdlvis-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
blp = "0.1.37"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
winit = "0.30.12"
glow = "0.16.0"
egui = "0.33.0"
egui-winit = "0.33.0"
egui_glow = "0.33.0"
egui-wgpu = "0.33.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
anyhow = "1.0.100"
thiserror = "2.0.17"
bytemuck = "1.24.0"
image = "0.25.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
byteorder = "1.5.0"
env_logger = "0.11.8"
nalgebra-glm = "0.20.0"
wgpu = "27.0.1"
pollster = "0.4.0"
confy = "0.6"
