[package]
name = "mdlvis-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
blp = "0.1.37"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
winit = "0.30.12"
egui = "0.33.0"
egui-winit = "0.33.0"
egui-wgpu = "0.33.0"
bytemuck = "1.24.0"
serde = { version = "1.0.228", features = ["derive"] }
byteorder = "1.5.0"
env_logger = "0.11.8"
nalgebra-glm = "0.20.0"
wgpu = "27.0.1"
confy = "2.0.0"
rfd = "0.15"
